update github actions tests.

--- a/.github/workflows/get-youtube-thumbnail.yml
+++ b/.github/workflows/get-youtube-thumbnail.yml
@@ -1,10 +1,18 @@
-name: CI Job
-on: [push]
-
+on: [push, pull_request]
+name: Tests
 jobs:
-  run_tests:
-    runs-on: ubuntu-latest
-    name: A job to run in docker container
+  test:
+    strategy:
+      matrix:
+        go-version: [1.14.x, 1.15.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Run action step
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
         uses: actions/checkout@v2
+      - name: Run tests
+        run: go test -race -v -cover ./...
